# abc-playground

./: .gitignore  CMakeLists.txt  README.md
benchmark/: C17.blif  C17.blif.approx  C17.blif_aig  C17_approx.blif  C2670.blif  C432.blif  C499.blif  C6288.blif  C7552.blif
benchmark/approximate-adders/: ACA_II_N16_Q4.blif  ACA_II_N16_Q8.blif  ACA_II_N8_Q4.blif  GeAr_N16_R2_P4.blif  GeAr_N16_R4_P4.blif  GeAr_N16_R4_P8.blif  GeAr_N16_R6_P4.blif  GeAr_N8_R1_P2.blif  GeAr_N8_R1_P3.blif  GeAr_N8_R2_P2.blif  GeAr_N8_R2_P4.blif  RCA_N16.blif  RCA_N8.blif
benchmark/iscas-85/: C1355.blif  C1908.blif  C3540.blif  C5315.blif  C880.blif
dals/: CMakeLists.txt  main.cpp  sasimi.cpp  sasimi.h  sta.cpp  sta.h
ectl/: CMakeLists.txt  abc_api.h  ectl.h  ectl_network.cpp  ectl_network.h  ectl_simulator.cpp  ectl_simulator.h  ectl_types.h  ectl_utils.cpp  ectl_utils.h
ext/: CMakeLists.txt
ext-lib/: CMakeLists.txt
ext/lib/: .gitignore
playground/: CMakeLists.txt  abc_api.h  main.cpp  sta.cpp  sta.h
result/: C17_1.blif  C17_2.blif  C1908_1.blif  C1908_10.blif  C1908_2.blif  C1908_3.blif  C1908_4.blif  C1908_5.blif  C1908_6.blif  C1908_7.blif  C1908_8.blif  C1908_9.blif  C880_1.blif  C880_2.blif  C880_3.blif  C880_4.blif
